doc: get confirmation code route
